--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/archivo": "^0.1.0",
     "@expo-google-fonts/poppins": "^0.1.0",
     "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
@@ -34,6 +35,7 @@
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-native-check-box": "^2.1.1",
     "@types/styled-components": "^5.1.2",
     "typescript": "~3.9.5"
   },
