--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,15 @@
     "dev": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
     "knex:rollback": "knex --knexfile knexfile.ts migrate:rollback",
-    "build": "tsc"
+    "build": "tsc",
+    "debug": "tsnd --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^6.8.0",
@@ -29,11 +33,16 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
-    "pg": "^8.3.2"
+    "nodemailer": "^6.4.18",
+    "pg": "^8.3.2",
+    "uuid": "^8.3.2"
   }
 }
